# waystation-rfq

./: README.md
backend/: .gitignore  README.md  backend_code_context.txt  pyproject.toml  run.py  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 5e1458004792_add_timezone_to_rfq_due_date.py  db71d1ec1cbb_create_initial_tables.py
backend/app/: __init__.py  config.py  models.py
backend/app/services/: database.py  llm_client.py  quote_processor.py
backend/app/views/: quotes.py  rfqs.py  suppliers.py
backend/docs/: alembic-readme.md  architecture-scalability.md  assumptions.md  sample-data.md  things-id-want-to-do.md
backend/tests/integration/: conftest.py  test_api.py  test_validation.py
frontend/: README.md  code_context.py  frontend_code_context.txt  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts
frontend/src/api/: quote-api.ts  rfq-api.ts  supplier-api.ts
frontend/src/components/: Modal.tsx
frontend/src/hooks/: useCreateRFQ.ts  useGenerateClarificationEmail.ts  useGetQuotes.ts  useGetQuotesForRfq.ts  useGetRFQs.ts  useGetSuppliers.ts  useProcessEmail.ts
frontend/src/modules/: QuoteComparisonView.tsx  QuotesView.tsx  RFQView.tsx  SuppliersView.tsx
frontend/src/types/: quote.ts  rfq.ts  supplier.ts
frontend/src/utils/: api.ts
